--- a/Embed.toml
+++ b/Embed.toml
@@ -1,21 +1,31 @@
-# For an explanation of the configuration and more config values, visit https://github.com/probe-rs/cargo-embed/blob/master/src/config/default.toml
 [default.probe]
 protocol = "Swd"
+speed = 20000
 
 [default.flashing]
 enabled = true
-restore_unwritten_bytes = false
 
 [default.reset]
 enabled = true
 halt_afterwards = false
 
 [default.general]
-chip = "stm32f446RETx"
-log_level = "INFO"
+chip = "RP2040"
+log_level = "WARN"
+# RP2040 does not support connect_under_reset
+connect_under_reset = false
 
 [default.rtt]
 enabled = true
+up_mode = "NoBlockSkip"
 channels = [
-    { up = 0, down = 0, name = "name", up_mode = "BlockIfFull", format = "Defmt" },
+    { up = 0, down = 0, name = "name", up_mode = "NoBlockSkip", format = "Defmt" },
 ]
+timeout = 3000
+show_timestamps = true
+log_enabled = false
+log_path = "./logs"
+
+[default.gdb]
+enabled = false
+gdb_connection_string = "127.0.0.1:2345"
