--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-runner = "probe-rs run --chip STM32F446RETx"
+runner = "probe-rs run --chip RP2040 --protocol swd"
 
 rustflags = [
   # LLD (shipped with the Rust toolchain) is used as the default linker
@@ -20,7 +20,7 @@ rustflags = [
 ]
 
 [build]
-target = "thumbv7em-none-eabihf"
+target = "thumbv6m-none-eabi"
 
 [env]
 DEFMT_LOG = "debug"
