--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ panic-probe = { version = "0.3.1", features = ["defmt"] }
 defmt = "0.3.6"
 defmt-rtt = "0.4"
 cortex-m-semihosting = "0.5.0"
-stm32f4xx-hal = { version="0.20.0", features = ["stm32f446", "defmt"]}
 embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
+rp-pico = "0.9.0"
 
 # Set the default for dependencies.
 [profile.dev.package."*"]
